# charm-back-fastapi

./: .dockerignore  .env.example  .env.test.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.frontend  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 698fdfdd5bb7_create_profile_like_table.py  9bef997f9dfc_create_profile_table.py
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/api/presenters/: __init__.py  profile.py
app/api/v1/: __init__.py  admin_profiles.py  auth.py  charm.py  matches.py  profile.py  registration.py
app/core/: config.py  exceptions.py  security.py
app/db/: session.py
app/models/: __init__.py  profile.py  profile_like.py
app/repositories/: profile_likes.py  profiles.py
app/schemas/: auth.py  charm.py  profile.py
app/scripts/: seed_data.py
app/services/: __init__.py  charm.py  profiles.py
deploy/ansible/: README.md  ansible.cfg  inventory.ini.example  playbook.yml
deploy/ansible/group_vars/: charm.vault.yml.example  charm.yml
deploy/ansible/group_vars/portfolio/: main.yml  vault.yml.example
deploy/ansible/templates/: docker-compose.prod.yml.j2  env.j2
frontend/: main.py
frontend/core/: api.py  config.py  session.py
frontend/views/: admin.py  auth.py  discovery.py  matches.py  profile.py
src/charm/: __init__.py
src/charm/api/: deps.py  main.py
src/charm/api/presenters/: profile.py
src/charm/api/v1/: admin_profiles.py  auth.py  charm.py  matches.py  profile.py  registration.py
src/charm/core/: __init__.py  config.py  logging.py  security.py
src/charm/db/: session.py
src/charm/frontend/: main.py
src/charm/frontend/core/: __init__.py  api.py  session.py  utils.py
src/charm/frontend/views/: admin.py  auth.py  discovery.py  matches.py  profile.py
src/charm/models/: __init__.py  profile.py  profile_like.py
src/charm/rate_limit/: deps.py  exceptions.py  keys.py  rules.py  scopes.py  service.py
src/charm/repositories/: profile_likes.py  profiles.py
src/charm/schemas/: charm.py  profile.py
src/charm/scripts/: seed_data.py
src/charm/services/: charm.py  profiles.py
tests/: __init__.py  conftest.py  helpers.py  test_admin_profiles.py  test_app.py  test_auth.py  test_auth_schemas.py  test_charm.py  test_profile.py  test_profile_schemas.py  test_request_logging.py
tests/rate_limit/: test_admin_rate_limit.py  test_charm_rate_limit.py  test_login_rate_limit.py  test_profile_rate_limit.py  test_rate_limit_keys.py  test_rate_limit_service.py  test_registration_rate_limit.py
