[project]
name = "charm-back-fastapi"
version = "0.1.0"
description = "FastAPI backend for Charm."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "pydantic-settings>=2.4",
  "pwdlib[argon2]>=0.2",
  "python-jose[cryptography]>=3.3",
  "email-validator>=2.2",
  "httpx>=0.27",
  "streamlit>=1.36"
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.11",
  "types-python-jose>=3.3",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "frontend", "tests", "alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/api/**/*.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
files = ["app", "frontend"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_configs = true
warn_return_any = true
no_implicit_optional = true
