[project]
name = "charm-back-fastapi"
version = "0.1.0"
description = "FastAPI backend for Charm."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "pydantic-settings>=2.4",
]
[project.optional-dependencies]
api = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "pwdlib[argon2]>=0.2",
  "python-jose[cryptography]>=3.3",
  "email-validator>=2.2",
  "limits[redis]>=5.8,<6",
  "redis>=5.0",
]

frontend = [
  "httpx>=0.27",
  "streamlit>=1.36",
]

all = [
  "charm-back-fastapi[api,frontend]",
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.11",
  "types-python-jose>=3.3",
  "asgi-lifespan>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/charm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/charm/api/**/*.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_configs = true
warn_return_any = true
no_implicit_optional = true
